--- a/styles.css
+++ b/styles.css
@@ -253,3 +253,159 @@ h3 {
     margin-right: 100px;
     font-size: 0.8rem;
 }
+@media (max-width: 900px) {
+    header {
+        height: auto;
+    }
+    #htop {
+        padding: 30px;
+    }
+    #hmain {
+        flex-direction: column;
+    }
+    #hleft {
+        width: 90%;
+        margin-top: 100px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    #hmain img {
+        max-width: 90%;
+        margin-right: auto;
+    }
+    h1 {
+        margin-right: auto;
+        font-size: 2.5rem;
+        margin-bottom: 40px;
+        text-align: center;
+    }
+    #hmain p {
+        margin-right: auto;
+        margin-bottom: 40px;
+        text-align: center;
+    }
+    #hmain button {
+        margin-bottom: 80px;
+    }
+    .tile {
+        height: auto;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+        max-height: none;
+        padding: 50px;
+        width: 90%;
+    }
+    .text {
+        width: 90%;
+    }
+    .tile img {
+        width: 80%;
+        margin-bottom: 60px;
+    }
+    .tile:first-child img, .tile:last-child img {
+        order: -1;
+    }
+    main p {
+        margin-right: auto;
+    }
+    footer {
+        height: auto;
+        padding: 0 60px 60px 60px;
+    }
+    #get-started {
+        width: 90%;
+        top: -25%;
+    }
+    #fcontent {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    #fleft {
+        display: grid;
+        width: 50%;
+        height: 100%;
+    }
+    #huddle {
+        margin-left: 0;
+        margin-top: 150px;
+    }
+    #fcenter {
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+        row-gap: 20px;
+        margin-top: 50px;
+    }
+    #fright {
+        display: flex;
+        width: 100%;
+        justify-content: center;
+    }
+    #socials {
+        display: flex;
+        column-gap: 20px;
+    }
+    #socials i {
+        margin-right: auto;
+    }
+    #copy {
+        justify-content: center;
+        margin-right: auto;
+        margin-top: 50px;
+    }
+}
+@media (max-width: 700px) {
+    #hmain {
+        padding: 10px;
+    }
+    #htop {
+        height: auto;
+    }
+    #htop img {
+        width: 40%;
+    }
+    #htop button {
+        width: 40%;
+        height: 30px;
+    }
+    h1 {
+        font-size: 1.5rem;
+    }
+    #hmain p {
+        font-size: 0.8rem;
+    }
+    h2 {
+        font-size: 1.4rem;
+    }
+    main p {
+        font-size: 0.8rem;
+        padding-bottom: 20px;
+    }
+    .tile {
+        padding: 10px;
+    }
+    h3 {
+        font-size: 1rem;
+    }
+    #get-started {
+        height: 200px;
+        top: -15%;
+    }
+    #get-started button {
+        width: 65%;
+        font-size: 0.8rem;
+        height: 50px;
+    }
+    footer {
+        padding: 10px;
+    }
+    #fleft {
+        width: 100%;
+    }
+    #fcenter {
+        margin-bottom: 30px;
+    }
+}
